# emerge-engine

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: scaling.rs
crates/emerge_input/: Cargo.toml
crates/emerge_input/src/: keyboard.rs  lib.rs
crates/emerge_math/: Cargo.toml  README.md
crates/emerge_math/src/: lib.rs
crates/emerge_physics/: Cargo.toml  README.md
crates/emerge_physics/src/: lib.rs
crates/emerge_render/: Cargo.toml
crates/emerge_render/src/: lib.rs
crates/emerge_window/: Cargo.toml
crates/emerge_window/src/: lib.rs
crates/input/: Cargo.toml
crates/input/src/: keyboard.rs  mouse.rs
crates/math/src/: lib.rs
crates/physics/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: device.rs  lib.rs
crates/window/: Cargo.toml
examples/: basic_creature.rs  basic_input.rs  basic_math.rs  basic_physics.rs  basic_window.rs  diff_neohookean_toy.rs  headless.rs
src/: lib.rs
src/boundary/: heightmap.rs
src/energy/: electromagnetics.rs  mod.rs
src/energy/thermodynamics/: diffusion.rs  mod.rs  scalar_field.rs  stencil.rs  transfer.rs
src/forces/: electromagnetics.rs  mod.rs
src/forces/boundary/: friction.rs  grip_friction.rs  mod.rs  predictive.rs  ratchet_friction.rs  slip.rs
src/forces/fields/: drag.rs  em.rs  mod.rs
src/gpu/: mod.rs  step_params.rs
src/information/: mod.rs
src/matter/: mod.rs  particle.rs
src/matter/materials/: corotated.rs  elastic.rs  sand.rs
src/solver/: lifecycle.rs  mod.rs  particles.rs
src/spacetime/: diff.rs  mod.rs  transfer.rs
src/spacetime/grid/: kernel.rs  mod.rs
src/spacetime/solver/: config.rs  lifecycle.rs  mod.rs  queries.rs  step.rs
src/systems/: mod.rs
src/systems/diagnostics/: logger.rs  per_material.rs
src/systems/gpu/: buffers.rs  mod.rs  pipeline.rs  solver.rs  step_params.rs
tests/: accuracy.rs  gpu.rs  physics_correctness.rs  solver.rs
(+27 files in other folders)
