[package]
name = "emerge-engine"
version = "0.1.0"
edition = "2021"
description = "A lightweight modular game engine."
license = "Apache"

[workspace]
members = [
    "crates/emerge_input",
    "crates/emerge_math",
    "crates/emerge_physics",
    "crates/emerge_window",
    "crates/emerge_render"
]

[dependencies]
emerge_input = { path = "crates/emerge_input" }
emerge_math = { path = "crates/emerge_math" }
emerge_physics = { path = "crates/emerge_physics" }
emerge_window = { path = "crates/emerge_window" }
emerge_render = { path = "crates/emerge_render" }
winit = "0.28.7"